--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,18 +462,6 @@ body {
 #content main .table-data .order table td {
 	padding: 16px 0;
 }
-/* #content main .table-data .order table tr td:first-child {
-	display: flex;
-	align-items: center;
-	grid-gap: 12px;
-	padding-left: 6px;
-} */
-/* #content main .table-data .order table td img {
-	width: 36px;
-	height: 36px;
-	border-radius: 50%;
-	object-fit: cover;
-} */
 #content main .table-data .order table tbody tr:hover {
 	background: var(--grey);
 }
@@ -783,6 +771,20 @@ body {
   }
 
   .bxs-user-detail:hover{
+    background: var(--dark-blue);
+    color: var(--light-blue);
+  }
+
+  .bxs-detail{
+    padding: 10px;
+    background: var(--light-blue);
+    color: var(--dark-blue);
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .bxs-detail:hover{
     background: var(--dark-blue);
     color: var(--light-blue);
   }
